test/TestPhases/parser/invalid/importpath.blc
import <>a_director/my mod>

module importpath

activity main()
end

